--- a/root/fans.html
+++ b/root/fans.html
@@ -2,14 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>awsl</title>
+        <title>bilibili</title>
     </head>
     <body><br/>
 <br/>
-<div align="center"><font size="5"> <strong>嘿嘿，你来啦，更多资料，请关注 “两猿社” 喔.</strong></font></div>
-<br/>
-<!--<div  align="center">a w s l</div>-->
+<div align="center"><font size="5"> <strong>求学求职中，随缘更新，欢迎关注</strong></font></div>
 <br/>
 <br/>
-<div align="center"><img src="./test1.jpg" title="awsl"/></div>
+<br/>
+<div align="center"><img src="./picture/fans.jpg" title="bilibili"/></div>
 </html>
