--- a/root/picture.html
+++ b/root/picture.html
@@ -2,14 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>awsl</title>
+        <title>picture</title>
     </head>
-    <body><br/>
+    <body>picture>
 <br/>
-<div align="center"><font size="5"> <strong>你居然想看图，不想关注我</strong></font></div>
+<div align="center"><font size="5"> <strong>图片来自免版权图库和本人游戏截图（原神），游戏公司：米哈游 (miHoYo)，仅用于欣赏，未用于任何商业用途</strong></font></div>
+
 <br/>
-<!--<div  align="center">a w s l</div>-->
 <br/>
+<div align="center"><img src="./picture/cats.jpg" title="cats"/></div>
 <br/>
-<div align="center"><img src="./xxx.jpg" title="awsl"/></div>
+<div align="center"><img src="./picture/p1.jpg" title="Yunjin"/></div>
+<br/>
+<div align="center"><img src="./picture/p2.jpg" title="Noelle1"/></div>
+<br/>
+<div align="center"><img src="./picture/p3.jpg" title="Noelle2"/></div>
+<br/>
+<div align="center"><img src="./picture/p4.jpg" title="Noelle3"/></div>
 </html>
